[gd_scene load_steps=4 format=3 uid="uid://n0p7f1ub47ji"]

[ext_resource type="Theme" uid="uid://6wi045ghfygi" path="res://styling/theme.tres" id="1_glqc6"]
[ext_resource type="Script" uid="uid://rropcgeku5ef" path="res://shop_item.gd" id="2_wxfep"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxfep"]
bg_color = Color(0.069283, 0.069228, 0.23169, 1)

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(0, 75)
offset_left = 1.0
offset_top = 1.0
offset_right = 483.0
offset_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_glqc6")
theme_override_styles/panel = SubResource("StyleBoxFlat_wxfep")
script = ExtResource("2_wxfep")

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 185.0
offset_bottom = 28.0
theme = ExtResource("1_glqc6")
theme_override_font_sizes/font_size = 26
text = "Placeholder Name"

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 28.0
offset_right = 391.0
offset_bottom = 74.0
theme = ExtResource("1_glqc6")
theme_override_colors/font_color = Color(0.856067, 0.856067, 0.856067, 1)
theme_override_font_sizes/font_size = 18
text = "Placeholder Description Placeholder Description Placeholder Description"
autowrap_mode = 3

[node name="ItemCost" type="Label" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 4.0
offset_right = 336.0
offset_bottom = 27.0
theme = ExtResource("1_glqc6")
theme_override_font_sizes/font_size = 22
text = "Cost:  10 GB"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 20.0
offset_right = 465.0
offset_bottom = 57.0
focus_mode = 1
theme = ExtResource("1_glqc6")
text = "Buy"

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
